[tool.poetry]
name = "parameters-explorer"
version = "0.1.0"
description = "Explore parameters of a model (trading strategies...)"
authors = ["femtotrader <femto.trader@gmail.com>"]
readme = "README.md"
packages = [{include = "parameters_explorer"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
numpy = "^1.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
